# studygit

./: .cproject  .gitignore  README  README.md  welcome.txt
UE开机流程/: The initial ue access.docx  自认为的UE开机流程.wps
cmaketest/: .cproject  CMakeLists.txt  CMakeLists.txt~  build.sh  build.sh~  test.cpp
cmaketest/Debug/: makefile  sources.mk  subdir.mk  test  test.d
cmaketest/Debug/printWorld/src/: subdir.mk  world.d
cmaketest/Debug/printhello/src/: hello.d  subdir.mk
cmaketest/Debug/printworld/src/: subdir.mk  world.d
cmaketest/printhello/: CMakeLists.txt  CMakeLists.txt~
cmaketest/printhello/src/: hello.cpp
cmaketest/printworld/: CMakeLists.txt  CMakeLists.txt~
cmaketest/printworld/src/: world.cpp
pub/base/: base.cpp
pub/tool/: tool.cpp
src/: Makefile  hello.cpp  hello.h  main.c
sub/sub1/: sub1.txe
sub/sub2/: sha.txt
unknow/: unknow.cpp
vbs/base/: ba.fjd
vbs/hfc/: hello.c
vbs/iot/: iot.xt
vbs/rrm/: passwd
